--- a/pages/css/main.css
+++ b/pages/css/main.css
@@ -330,6 +330,7 @@ textarea.input1 + .shadow-input1 {
 @media (max-width: 992px) {
   .container-contact1 {
     padding: 90px 80px 88px 90px;
+   /* QXlraGFuIEhhaml5ZXYgLSBGYXJoYWQgSXNrYW5kYXJvdiAtIEthbWlsIEFobWFkZXY=*/
   }
 
   .contact1-pic {
